fable/test/valid/parameter_n.f
      program prog
      parameter(n=2)
      do i=1,n
        write(6, *) i
      enddo
      end
