fable/test/semantic_error/assignment_to_parameter.f
      program prog
      parameter(n=2)
      n = 1
      end
